--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>Web Development Training</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="logo">
+            <img src="/Assets/Form_logo.png" alt="Logo">
+        </div>
+        <div class="text-div">
+            <h1>For Individuals</h1>
+            <p>Inspiring wholesome harmony for the mind, body and spirit, for everyone, everywhere.</p>
+        </div>
+    </header>
     <div class="form-container">
         <form>
           <label for="name">Name</label>
