--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
     </header>
     <div class="form-container">
         <form>
-          <label for="name">Name</label>
-          <input type="text" id="name" placeholder="Enter your name">
+          <label for="first_name">First Name</label>
+          <input type="text" id="first_name" placeholder="Samson">
+
+          <label for="last_name">Last Name</label>
+          <input type="text" id="last_name" placeholder="Dauda">
+
+          <label for="gender">Gender:</label>
+            <select id="gender" name="gender">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+            </select>
       
           <label for="email">Email</label>
           <input type="email" id="email" placeholder="Enter your email">
@@ -31,6 +40,5 @@
           <button type="submit">Submit</button>
         </form>
       </div>
-      
 </body>
 </html>
