--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
     </header>
     <div class="form-container">
         <form>
-          <label for="first_name">First Name</label>
-          <input type="text" id="first_name" placeholder="Samson"> 
+         <div class="fln">
+            <div class="firstn">
+              <label for="first_name">First Name</label>
+              <input type="text" id="first_name" placeholder="Samson"> 
+            </div>
 
-          <label for="last_name">Last Name</label>
-          <input type="text" id="last_name" placeholder="Dauda">
-
+            <div class="lastn">
+              <label for="last_name">Last Name</label>
+              <input type="text" id="last_name" placeholder="Dauda">
+            </div>
+         </div>
           <label for="gender">Gender:</label>
             <select id="gender" name="gender">
                 <option value=""disabled>Select here</option>
