Changed file path for the logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/Assets/Form_logo.png" alt="Logo">
+            <img src="./Assets/Form_logo.png" alt="Logo">
         </div>
         <div class="text-div">
             <h1>For Individuals</h1>
