Removed useless class.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          </div>
 
           <div class="fln">
-            <div class="firstn firstnn">
+            <div class="firstn">
               <label for="gender">Gender:</label>
               <select id="gender" name="gender">
                   <option value=""disabled>Select here</option>
@@ -42,7 +42,7 @@
               </select>
             </div>
         
-            <div class="lastn lastnn">
+            <div class="lastn">
               <label for="dob">Date of Birth</label>
               <input type="date" id="dob" placeholder="Select here"required>
             </div>
